--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <!-- Blog Post -->
 
                 <!-- Title -->
-                <h1>Blog Post Title</h1>
+                <h1>Fitness</h1>
 
                 <!-- Author -->
                 <p class="lead">
@@ -187,18 +187,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
+                       
                     </div>
                     <!-- /.row -->
                 </div>
