--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <!-- Comment -->
                 <div class="media">
                     <a class="pull-left" href="#">
-                        <img class="media-object" src="http://placehold.it/64x64" alt="">
+                        <img class="media-object" src="http://placehold.it/64x64" width: 20px height: 20px alt="">
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">Yakushi
