--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <!-- Comment -->
                 <div class="media">
                     <a class="pull-left" href="#">
-                        <img class="media-object" src="http://placehold.it/64x64" width: 20px height: 20px alt="">
+                        <img class="media-object" src=""alt="">
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">Yakushi
@@ -129,7 +129,7 @@
                 <!-- Comment -->
                 <div class="media">
                     <a class="pull-left" href="#">
-                        <img class="media-object" src="https://s-media-cache-ak0.pinimg.com/originals/a6/5a/34/a65a341e3fec7a52077708f118e01ce1.jpg" alt="">
+                        <img class="media-object" src="" alt="">
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">Blesh
@@ -139,7 +139,7 @@
                         <!-- Nested Comment -->
                         <div class="media">
                             <a class="pull-left" href="#">
-                                <img class="media-object" src="https://lh3.ggpht.com/pUd8Eomq9O_NlRkjj8qkXqKp55JSRqaB7utDjNZ_IJ5rKY8edu0fz8gbdptMcP73z_I=h900" alt="">
+                                <img class="media-object" src="" alt="">
                             </a>
                             <div class="media-body">
                                 <h4 class="media-heading">Kesha
