--- a/index.html
+++ b/index.html
@@ -96,21 +96,21 @@
                 <p>Before the industrial revolution, fitness was defined as the capacity to carry out the day’s activities without undue fatigue. However, with automation and changes in lifestyles physical fitness is now considered a measure of the body's ability to function efficiently and effectively in work and leisure activities, to be healthy, to resist hypokinetic diseases, and to meet emergency situations.</p>
                <p>Here are seven fitness tips that will help you improve your overall physical health:
 
-1.            Daily exercise.  Every day perform some movements that can elevate the rate of your heart.  It can simply include walking when buying things in the market nearby, or doing household chores like washing clothes, mowing lawns, and other chores.
+<p>1.            Daily exercise.  Every day perform some movements that can elevate the rate of your heart.  It can simply include walking when buying things in the market nearby, or doing household chores like washing clothes, mowing lawns, and other chores.</p>
 
-2.            Eat more veggies. Vegetables and fruits will keep you energized and healthy. Plants in their natural state contain lots of fibers and nutrients.  Organic fruits and vegetables are preferred whenever possible since they are free from any chemical contamination.
+<p>2.            Eat more veggies. Vegetables and fruits will keep you energized and healthy. Plants in their natural state contain lots of fibers and nutrients.  Organic fruits and vegetables are preferred whenever possible since they are free from any chemical contamination.</p>
 
-3.            Weight train.  Muscles are weakened as you age.  Do resistance training to create hypertrophy (muscle bulk). This helps you look younger and adds more quality into your life.
+<p>3.            Weight train.  Muscles are weakened as you age.  Do resistance training to create hypertrophy (muscle bulk). This helps you look younger and adds more quality into your life.</p>
 
-4.            Circuit train; weight training which enables you to continually move from one workout to another.  Following this practice can improve your heart rate during the whole workout doubling your cardio session.
+<p>4.            Circuit train; weight training which enables you to continually move from one workout to another.  Following this practice can improve your heart rate during the whole workout doubling your cardio session.</p>
 
-5.            Train functionally.  Incorporate some movements into your daily exercise which benefit or mimic your practiced movements in the actual world.  Sports are good for functional training because the body is required to move in an efficient way.  Functional training can keep your body balanced making it more resistant to illnesses and injuries.
+<p>5.            Train functionally.  Incorporate some movements into your daily exercise which benefit or mimic your practiced movements in the actual world.  Sports are good for functional training because the body is required to move in an efficient way.  Functional training can keep your body balanced making it more resistant to illnesses and injuries.</p>
 
-6.            Stretching your body as you warm up and after exercise this will keep you flexible, loose and limber.
+<p>6.            Stretching your body as you warm up and after exercise this will keep you flexible, loose and limber.</p>
 
-7.            Hydrate you need a minimum of 8 glasses of water per day.  The human body is 60% water.  Coffee, soda, alcohol, and tea are all dehydrating so those don”t count in your eight glass requirement.
+<p>7.            Hydrate you need a minimum of 8 glasses of water per day.  The human body is 60% water.  Coffee, soda, alcohol, and tea are all dehydrating so those don”t count in your eight glass requirement.</p>
 
-Through exercising, you will not only have a healthy body and healthy heart, you will also obtain a great looking body that you can be proud of. In fact, many people exercise in order to have a better looking body.  You can never deny the fact that a good looking and muscular body produces more sex appeal and is considered to be more attractive than having that extra flab and looking like the Pillsbury doughboy or too thin that you look like a scarecrow.  Having a great looking body also produces indirect benefits to you, such as having more self-confidence and a significant increase in self-esteem.
+<p>Through exercising, you will not only have a healthy body and healthy heart, you will also obtain a great looking body that you can be proud of. In fact, many people exercise in order to have a better looking body.  You can never deny the fact that a good looking and muscular body produces more sex appeal and is considered to be more attractive than having that extra flab and looking like the Pillsbury doughboy or too thin that you look like a scarecrow.  Having a great looking body also produces indirect benefits to you, such as having more self-confidence and a significant increase in self-esteem.
 
                 </p>
                 <hr>
