--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
+                                <li><a href="#">Pimples</a>
                                 </li>
-                                <li><a href="#">Category Name</a>
+                                <li><a href="#">Hair</a>
                                 </li>
-                                <li><a href="#">Category Name</a>
+                                <li><a href="#">Skin</a>
                                 </li>
-                                <li><a href="#">Category Name</a>
+                                <li><a href="index.html">Fitness</a>
                                 </li>
                             </ul>
                         </div>
