--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
-                                <li><a href="#">Pimples</a>
+                                <li><a href="Pimples.html">Pimples</a>
                                 </li>
                                 <li><a href="#">Hair</a>
                                 </li>
