--- a/Pimples.html
+++ b/Pimples.html
@@ -101,7 +101,7 @@ Another quick way to get rid of pimples is the use of lemon juice, which is rich
 Dip a clean cotton swab in fresh lemon juice and apply it to the pimples before going to bed.
 You can also mix one tablespoon of lemon juice with one teaspoon of cinnamon powder and put it on the pimples overnight. In the morning, wash the skin well with lukewarm water. However, this particular remedy is not suitable for those with sensitive skin.</p>
 
-                <p>Tea Tree Oil
+                <p>3. Tea Tree Oil
 
 Tea tree oil is excellent for treating acne and pimples. It has antibacterial properties that help fight the bacteria that cause these skin problems. Plus, its soothing properties help reduce the redness and inflammation of pimples. It also helps dry out blackheads and whiteheads.
 
@@ -109,17 +109,17 @@ Just dip a cotton ball in tea tree essential oil and dab it on the affected area
 Another option is to mix a few drops of tea tree oil in 1 tablespoon of aloe vera gel. Apply it on your pimples and blemishes, leave it on for 20 minutes and then rinse it off.
 Note: Steer clear of tea tree oil if you have sensitive skin.</p>
                 
-                <p>Toothpaste
+                <p>4. Toothpaste
 
 The toothpaste that you use every morning to clean your teeth also can be used to treat pimples quickly. It is most effective when used following the ice remedy. You must use white toothpaste; avoid using gel toothpaste. Apply some white toothpaste over the affected skin area before going to bed.
 In the morning, wash your face with water and you will see a significant improvement in the swelling.
 If you wish, you can repeat the process in the daytime also. Just make sure the toothpaste remains on the pimples for at least half an hour.</p>
-                <p>Steam
+                <p>5. Steam
 
 Steaming is wonderful for your skin at any time, but particularly when you have pimples. The steam will open your pores and allow your skin to breathe. This helps get rid of oils, dirt and bacteria trapped in the pores that can cause infection or inflammation. Fill a large container with hot water and allow the steam to come in contact with your face for a few minutes.
                     Rinse your face with lukewarm water and, after drying, apply an oil-free moisturizer.</p>
 
-<p> Garlic
+<p>6.  Garlic
 
 Garlic is an antiviral, antifungal, antiseptic and antioxidant agent that can help in the fast treatment of pimples. The sulfur in garlic also promotes quick healing of pimples.
 
