--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                             <ul class="list-unstyled">
                                 <li><a href="Pimples.html">Pimples</a>
                                 </li>
-                                <li><a href="hair.html">Hair</a>
+                                <li><a href="hair.html">Skin</a>
                                 </li>
-                                <li><a href="skin.html">Skin</a>
+                                <li><a href="skin.html">Hair</a>
                                 </li>
                                 <li><a href="index.html">Fitness</a>
                                 </li>
