--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                 <!-- Author -->
                 <p class="lead">
-                    by <a href="#">Start Bootstrap</a>
+                    by ShekinaG.
                 </p>
 
                 <hr>
