--- a/about.html
+++ b/about.html
@@ -81,7 +81,8 @@
                 
 
                 <!-- Preview Image -->
-                <img class="img-responsive" src="https://www.fitnessfirst.com.ph/globalassets/fitness-first-ph-shared-blocks/all-images/600-x-400/body-balance-1.jpg" alt="">
+                <img class="img-responsive" src="https://www.clipartsgram.com/image/502390473-health-related-fitness-clipart.jpg" alt="">
+                
 
                 <hr>
 
