--- a/skin.html
+++ b/skin.html
@@ -81,7 +81,7 @@
                 <hr>
 
                 <!-- Date/Time -->
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on July 02, 2016 at 8:45 AM</p>
 
                 <hr>
 
@@ -91,28 +91,15 @@
                 <hr>
 
                 <!-- Post Content -->
-                <p>Physical fitness is a general state of health and well-being and, more specifically, the ability to perform aspects of sports, occupations and daily activities. </p>
-                <p>Physical fitness is generally achieved through proper nutrition,[1] moderate-vigorous physical exercise, and sufficient rest.</p>
-                <p>Before the industrial revolution, fitness was defined as the capacity to carry out the day’s activities without undue fatigue. However, with automation and changes in lifestyles physical fitness is now considered a measure of the body's ability to function efficiently and effectively in work and leisure activities, to be healthy, to resist hypokinetic diseases, and to meet emergency situations.</p>
-               <p>Here are seven fitness tips that will help you improve your overall physical health:
+                <p>1. Use cold water when you wash your hair. It might be hard to wash your hair in ice-cold water, but if you want silky, smooth hair, make it as chilly as you can take. Cold water helps the hair shaft lie flat, so when it dries it has a smooth, shiny appearance. Hot water has the opposite effect, creating frizz and drying out your hair.
+If you can’t stand the thought of taking a cold shower, take a shower using warm water and wash your hair separately.</p>
+                <p>2. 
+Wash your hair a few times a week, not every day. In order for your hair to stay soft and smooth, it needs the natural conditioning of sebum, the oil that your scalp produces to keep your hair strong. If you wash your hair every day, you rinse away this nourishing oil before it ever gets the chance to soften your hair. Washing your hair every day will eventually make it feel dry and coarse instead of smooth and silky.
+Find the washing routine that’s right for you. Some people do it two or three times a week, while others wash every other day if their hair is especially oily.
+In between washings, dry shampoo to keep your hair looking fresh.</p>
+                <p>3. 
+Wash with sulfate-free shampoo. Sulfates are found in many cleansers, including dishwashing detergent, laundry detergent, and more. Sulfates are effective and washing away oil and grease, but using this ingredient on your hair can be too harsh and damaging. Look for sulfate-free shampoo that will cleanse your hair without stripping away its protective oils.</p>
 
-<p>1.            Daily exercise.  Every day perform some movements that can elevate the rate of your heart.  It can simply include walking when buying things in the market nearby, or doing household chores like washing clothes, mowing lawns, and other chores.</p>
-
-<p>2.            Eat more veggies. Vegetables and fruits will keep you energized and healthy. Plants in their natural state contain lots of fibers and nutrients.  Organic fruits and vegetables are preferred whenever possible since they are free from any chemical contamination.</p>
-
-<p>3.            Weight train.  Muscles are weakened as you age.  Do resistance training to create hypertrophy (muscle bulk). This helps you look younger and adds more quality into your life.</p>
-
-<p>4.            Circuit train; weight training which enables you to continually move from one workout to another.  Following this practice can improve your heart rate during the whole workout doubling your cardio session.</p>
-
-<p>5.            Train functionally.  Incorporate some movements into your daily exercise which benefit or mimic your practiced movements in the actual world.  Sports are good for functional training because the body is required to move in an efficient way.  Functional training can keep your body balanced making it more resistant to illnesses and injuries.</p>
-
-<p>6.            Stretching your body as you warm up and after exercise this will keep you flexible, loose and limber.</p>
-
-<p>7.            Hydrate you need a minimum of 8 glasses of water per day.  The human body is 60% water.  Coffee, soda, alcohol, and tea are all dehydrating so those don”t count in your eight glass requirement.</p>
-
-<p>Through exercising, you will not only have a healthy body and healthy heart, you will also obtain a great looking body that you can be proud of. In fact, many people exercise in order to have a better looking body.  You can never deny the fact that a good looking and muscular body produces more sex appeal and is considered to be more attractive than having that extra flab and looking like the Pillsbury doughboy or too thin that you look like a scarecrow.  Having a great looking body also produces indirect benefits to you, such as having more self-confidence and a significant increase in self-esteem.
-
-                </p>
                 <hr>
 
                 <!-- Blog Comments -->
@@ -138,10 +125,10 @@
                         <img class="media-object" src=""alt="">
                     </a>
                     <div class="media-body">
-                        <h4 class="media-heading">Yakushi
-                            <small>August 25, 2014 at 9:30 PM</small>
+                        <h4 class="media-heading">Sherie
+                            <small>July 25, 2016 at 9:30 PM</small>
                         </h4>
-                       Ohh! This site is very interesting. It really helps.
+                       Oh! Thanks admin for the info.
                     </div>
                 </div>
 
@@ -152,7 +139,7 @@
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">Blesh
-                            <small>August 25, 2014 at 9:30 PM</small>
+                            <small>July 26, 2016 at 9:00 PM</small>
                         </h4>
                       The tips are easy to follow!
                         <!-- Nested Comment -->
@@ -162,7 +149,7 @@
                             </a>
                             <div class="media-body">
                                 <h4 class="media-heading">Kesha
-                                    <small>August 25, 2014 at 9:30 PM</small>
+                                    <small>july 30, 2014 at7:00 AM</small>
                                 </h4>
                                Yeah! True. :)
                             </div>
@@ -212,14 +199,7 @@
                 </div>
 
                 <!-- Side Widget Well -->
-                <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
-                </div>
-
-            </div>
-
-        </div>
+               
         <!-- /.row -->
 
         <hr>
