--- a/skin.html
+++ b/skin.html
@@ -73,7 +73,7 @@
 
                 <!-- Author -->
                 <p class="lead">
-                    by <a href="#">Start Bootstrap</a>
+                    by HallelT.
                 </p>
 
                 <hr>
