--- a/skin.html
+++ b/skin.html
@@ -79,7 +79,7 @@
                 <hr>
 
                 <!-- Date/Time -->
-                <p><span class="glyphicon glyphicon-time"></span> Posted on September 29, 2016 AT 6:30 PM/p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on September 29, 2016 AT 6:30 PM</p>
 
                 <hr>
 
