--- a/Pimples.html
+++ b/Pimples.html
@@ -39,19 +39,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">BLOG</a>
+                <a class="navbar-brand" href="index.html">BLOG</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="about.html">About</a>
                     </li>
+                    
                     <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -71,17 +69,17 @@
                 <!-- Blog Post -->
 
                 <!-- Title -->
-                <h1>Fitness</h1>
+                <h1>Pimples</h1>
 
                 <!-- Author -->
                 <p class="lead">
-                    by <a href="#">Start Bootstrap</a>
+                    by DeesW.
                 </p>
 
                 <hr>
 
                 <!-- Date/Time -->
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on September 6, 2016 at 9:00 PM</p>
 
                 <hr>
 
@@ -153,9 +151,9 @@ Eating one raw garlic clove daily can also help purify your blood. But do not to
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">Yakushi
-                            <small>August 25, 2014 at 9:30 PM</small>
+                            <small>September 7, 2016 at 9:30 PM</small>
                         </h4>
-                       Ohh! This site is very interesting. It really helps.
+                       This site is very interesting. 
                     </div>
                 </div>
 
@@ -166,7 +164,7 @@ Eating one raw garlic clove daily can also help purify your blood. But do not to
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">Blesh
-                            <small>August 25, 2014 at 9:30 PM</small>
+                            <small>September 14, 2016 at 8:00 PM</small>
                         </h4>
                       The tips are easy to follow!
                         <!-- Nested Comment -->
@@ -176,7 +174,7 @@ Eating one raw garlic clove daily can also help purify your blood. But do not to
                             </a>
                             <div class="media-body">
                                 <h4 class="media-heading">Kesha
-                                    <small>August 25, 2014 at 9:30 PM</small>
+                                    <small>September 18, 2016 at 5:50 PM</small>
                                 </h4>
                                Yeah! True. :)
                             </div>
@@ -210,11 +208,11 @@ Eating one raw garlic clove daily can also help purify your blood. But do not to
                     <div class="row">
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
-                                <li><a href="#">Pimples</a>
+                                <li><a href="Pimples.html">Pimples</a>
                                 </li>
-                                <li><a href="#">Hair</a>
+                                <li><a href="hair.html">Hair</a>
                                 </li>
-                                <li><a href="#">Skin</a>
+                                <li><a href="skin.html">Skin</a>
                                 </li>
                                 <li><a href="index.html">Fitness</a>
                                 </li>
@@ -226,14 +224,7 @@ Eating one raw garlic clove daily can also help purify your blood. But do not to
                 </div>
 
                 <!-- Side Widget Well -->
-                <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
-                </div>
-
-            </div>
-
-        </div>
+                
         <!-- /.row -->
 
         <hr>
